--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.13",
     "rollbar": "^2.24.0"
   }
 }
